--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 <meta name="keywords" content="diseño gráfico, diseñador gráfico, artista plástico, desaroollo web, páginas web, diseño corporativo, escultura">
 	
 <!--	ESTAS INSTRUCCIONES SON DE FACEBOOK (OPEN GRAPH METAS)-->
-<meta property="og:url" content="" />
+<meta property="og:url" content="https://victorlomeli.github.io/tarjeta/" />
 <meta property="og:type" content="" />
-<meta property="og:title" content="" />
-<meta property="og:description" content="" />
-<meta property="og:image" content="" />
+<meta property="og:title" content="Victor Lomelí" />
+<meta property="og:description" content="ALO Estudio Gráfico" />
+<meta property="og:image" content="https://victorlomeli.github.io/tarjeta/img/alo-estudiografico.png" />
 	
 <link href="css/layout.css" rel="stylesheet" type="text/css">
 </head>
